examples/06-policy-engines/03-Gatekeeper/test-gatekeeper-pod-with-team.yml
apiVersion: v1
kind: Pod
metadata:
  name: test-with-team-gatekeeper
  labels:
    team: "conclusion-xforce"
spec:
  containers:
  - name: nginx
    image: nginx:latest
