examples/06-policy-engines/03-Gatekeeper/test-gatekeeper-pod-without-team.yml
apiVersion: v1
kind: Pod
metadata:
  name: test-no-team
spec:
  containers:
  - name: nginx
    image: nginx:latest
