examples/06-policy-engines/03-Gatekeeper/pods-must-have-team.yml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: pods-must-have-team
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces: ["06-policy-engines-gatekeeper"]
  parameters:
    labels: ["team"]
